# cline-demo

./: .clinerules  .gitignore  Dockerfile  hello.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: python-tests.yml
src/: fetch.py  scrape.py  test_fetch.py
tests/: test_fetch.py  test_simple.py
